--- a/Architect.vcxproj.filters
+++ b/Architect.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="src\gfx\opengl\glshaderconstants.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\filesystem\filemanager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\fileio.h">
@@ -114,6 +117,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\gfx\opengl\glshaderconstants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\filesystem\filemanager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
