GLRenderer2D batches maximum amount of data per draw call and shader casts texture index properly

--- a/Architect.vcxproj
+++ b/Architect.vcxproj
@@ -169,6 +169,7 @@
     <ClInclude Include="src\input\input.h" />
     <ClInclude Include="src\stb\stb\stbi_image_write.h" />
     <ClInclude Include="src\stb\stb\stb_image.h" />
+    <ClInclude Include="src\thread.h" />
     <ClInclude Include="src\timer.h" />
   </ItemGroup>
   <ItemGroup>
