--- a/Architect.vcxproj
+++ b/Architect.vcxproj
@@ -105,13 +105,13 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;_USE_MATH_DEFINES;GLM_FORCE_RADIANS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>D:\GithubRepos\Architect\vendor\glm;D:\GithubRepos\Architect\vendor\glfw-3.3.7.bin.WIN64\include;D:\GithubRepos\Architect\vendor\glew\include;D:\GithubRepos\Architect\vendor\assimp\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\GithubRepos\Architect\vendor\sndlib\include;D:\GithubRepos\Architect\vendor\glm;D:\GithubRepos\Architect\vendor\glfw-3.3.7.bin.WIN64\include;D:\GithubRepos\Architect\vendor\glew\include;D:\GithubRepos\Architect\vendor\assimp\include;D:\GithubRepos\Architect\vendor\openal\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\GithubRepos\Architect\vendor\glfw-3.3.7.bin.WIN64\lib-vc2022;D:\GithubRepos\Architect\vendor\glew\lib\Release\x64;D:\GithubRepos\Architect\vendor\assimp\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;assimp.lib;glew32s.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>D:\GithubRepos\Architect\vendor\sndlib\lib;D:\GithubRepos\Architect\vendor\openal\libs\Win64\EFX-Util_MT;D:\GithubRepos\Architect\vendor\openal\libs\Win64;D:\GithubRepos\Architect\vendor\glfw-3.3.7.bin.WIN64\lib-vc2022;D:\GithubRepos\Architect\vendor\glew\lib\Release\x64;D:\GithubRepos\Architect\vendor\assimp\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;assimp.lib;glew32s.lib;glfw3.lib;OpenAL32.lib;EFX-Util.lib;sndfile.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -133,7 +133,10 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="pokemon.cpp" />
+    <ClCompile Include="src\audio\openal\sounddevice.cpp" />
     <ClCompile Include="spritesheet.cpp" />
+    <ClCompile Include="src\audio\openal\audiobuffer.cpp" />
+    <ClCompile Include="src\audio\openal\soundsource.cpp" />
     <ClCompile Include="src\chronos\deltatime.cpp" />
     <ClCompile Include="src\fileio.cpp" />
     <ClCompile Include="src\filesystem\filemanager.cpp" />
@@ -156,7 +159,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pokemon.h" />
+    <ClInclude Include="src\audio\openal\sounddevice.h" />
     <ClInclude Include="spritesheet.h" />
+    <ClInclude Include="src\audio\openal\audiobuffer.h" />
+    <ClInclude Include="src\audio\openal\soundsource.h" />
     <ClInclude Include="src\chronos\deltatime.h" />
     <ClInclude Include="src\fileio.h" />
     <ClInclude Include="src\filesystem\filemanager.h" />
