--- a/Architect.vcxproj.filters
+++ b/Architect.vcxproj.filters
@@ -87,7 +87,7 @@
     <ClCompile Include="src\audio\openal\sounddevice.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\audio\openal\soundsource.cpp">
+    <ClCompile Include="src\audio\openal\audiosource.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\audio\openal\audiorenderer.cpp">
@@ -152,9 +152,6 @@
     <ClInclude Include="src\timer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\thread.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\gfx\opengl\uniformbuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -173,10 +170,16 @@
     <ClInclude Include="src\audio\openal\sounddevice.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\audio\openal\soundsource.h">
+    <ClInclude Include="src\audio\openal\audiosource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\audio\openal\audiorenderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\app.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\thread\thread.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
