--- a/Architect.vcxproj.filters
+++ b/Architect.vcxproj.filters
@@ -93,15 +93,6 @@
     <ClCompile Include="src\audio\openal\audiorenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="readwave.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\audio\openal\musicbuffer.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\audio\openal\albuffer.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\audio\openal\allistener.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -227,12 +218,6 @@
     <ClInclude Include="src\audio\openal\aldebug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\audio\openal\musicbuffer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\audio\openal\albuffer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\audio\openal\allistener.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -270,6 +255,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\gfx\gui\guiwindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\thread\mythread.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
