--- a/Architect.vcxproj.filters
+++ b/Architect.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClCompile Include="src\gfx\gui\gui.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\math\soe2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\fileio.h">
@@ -258,6 +261,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\thread\mythread.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\math\soe2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
