--- a/imgui.ini
+++ b/imgui.ini
@@ -20,7 +20,7 @@ Size=383,156
 Collapsed=0
 
 [Window][Video card info]
-ViewportPos=29,34
+ViewportPos=36,30
 ViewportId=0x11C0D9F5
 Size=416,150
 Collapsed=0
@@ -28,7 +28,13 @@ Collapsed=0
 [Window][Marked Pokemon]
 ViewportPos=28,192
 ViewportId=0xB023F87A
-Size=381,178
+Size=381,742
+Collapsed=0
+
+[Window][Pokemon]
+ViewportPos=40,257
+ViewportId=0xAD61A96F
+Size=369,252
 Collapsed=0
 
 [Docking][Data]
